--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
 </head>
 <body>
   <h1>Chicago Population Movement</h1>
-  <div class="map-container" id="map"></div>
-
+  <div class="content-container">
+    <div class="filters-container">
+      <div class="map-filter"></div>
+      <div class="button-container"></div>
+    </div>
+    <div class="interactive-container">
+      <div class="map-container" id="map"></div>
+      <div class="chart-container" id="chart"></div>
+    </div>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
