new data + map popups

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
   <link rel= "stylesheet" type="text/css"  href="main.css">
 </head>
 <body>
-  <h1>Chicago Population Movement</h1>
+  <h2>Chicago Population Movement</h2>
   <div class="content-container">
     <div class="filters-container">
+      <p>Select a population group for which to display physical and income mobility between the periods
+        2008-2012 and 2013-2017:</p>
       <div class="map-filter"></div>
       <div class="button-container"></div>
     </div>
     <div class="interactive-container">
       <div class="map-container" id="map"></div>
-      <div class="chart-container" id="chart"></div>
+      <svg class="chart-container" id="chart"></svg>
     </div>
   </div>
   <script src="index.js"></script>
