all tooltips, partial higlights

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h2>Chicago Population Movement</h2>
   <div class="content-container">
     <div class="filters-container">
-      <p class="text-centered">Select a population group for which to display geographic and income mobility between the periods
+      <p class="text-centered">Select a population group to display their geographic and income mobility between the periods
         2008-2012 and 2013-2017:</p>
       <div class="map-filter"></div>
       <div class="button-container"></div>
