data source with link and github link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       </div>
     </div>
   </div>
+  <p class="footer">Loren Hinkson (University of Chicago, CAPP '19)  <a href="https://github.com/lorenh516"><img src="github_logo.svg" alt="Github Logo" height="15px" width="15px"></a> </p>
+  <p class="footer">Data Source: <a href="https://www.census.gov/programs-surveys/acs">U.S. Census Bureau American Community Survey</a></p>
+
   <script src="index.js"></script>
 </body>
 </html>
