fixed tooltip bug

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
 <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
   <link rel= "stylesheet" type="text/css"  href="main.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <h2>Chicago Population Movement</h2>
@@ -39,9 +40,10 @@
         <svg class="chart-container" id="chart"></svg>
       </div>
     </div>
+    <p class="footer">Loren Hinkson, University of Chicago, CAPP '19 <a href="https://github.com/lorenh516"><img src="github_logo.svg" alt="Github Logo" height="15px" width="15px"></a> </p>
+    <p class="footer">Data Source: <a href="https://www.census.gov/programs-surveys/acs">U.S. Census Bureau American Community Survey</a></p>
+
   </div>
-  <p class="footer">Loren Hinkson (University of Chicago, CAPP '19)  <a href="https://github.com/lorenh516"><img src="github_logo.svg" alt="Github Logo" height="15px" width="15px"></a> </p>
-  <p class="footer">Data Source: <a href="https://www.census.gov/programs-surveys/acs">U.S. Census Bureau American Community Survey</a></p>
 
   <script src="index.js"></script>
 </body>
