--- a/index.html
+++ b/index.html
@@ -21,23 +21,26 @@
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <h2>Chicago Population Movement</h2>
+
   <div class="content-container">
-    <div class="filters-container">
-      <p class="text-centered">Select a population group to display their geographic and income mobility between the periods
-        2008-2012 and 2013-2017:</p>
-      <div class="map-filter"></div>
-      <div class="button-container"></div>
-    </div>
+
     <div class="interactive-container">
-      <div class="map-legend-cont"></div>
 
       <div class="chart-div-cont">
+
         <div class="map-container" id="map"></div>
+        <div class="map-legend-cont"></div>
       </div>
 
       <div class="chart-div-cont second-one">
-        <svg class="chart-container" id="chart"></svg>
+        <h2>Chicago Population Movement</h2>
+        <div class="filters-container">
+          <p class="text-centered">Select a population group to display their geographic and income mobility between the periods
+            2008-2012 and 2013-2017:</p>
+          <div class="map-filter"></div>
+          <div class="button-container"></div>
+        </div>
+        <div class="chart-container"></div>
       </div>
     </div>
     <p class="footer">Loren Hinkson, University of Chicago, CAPP '19 <a href="https://github.com/lorenh516"><img src="github_logo.svg" alt="Github Logo" height="15px" width="15px"></a> </p>
