--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="chart-div-cont second-one">
         <h2>Chicago Population Movement</h2>
         <div class="filters-container">
-          <p class="text-centered">Select a population group to display their geographic and income mobility between the periods
+          <p class="text-centered">Select a population group* to display their geographic and income mobility between the periods
             2008-2012 and 2013-2017:</p>
           <div class="map-filter"></div>
           <div class="button-container"></div>
